@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-04T08:22:21Z",
-  "count_outdated" : 2369,
-  "uniques_outdated" : 559,
-  "count" : 2420,
-  "uniques" : 593,
+  "timestamp" : "2022-09-05T02:09:50Z",
+  "count_outdated" : 2372,
+  "uniques_outdated" : 561,
+  "count" : 2422,
+  "uniques" : 594,
   "clones" : [
-    {
-      "timestamp": "2022-08-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-08-22T00:00:00Z",
       "count": 2,
