@@ -1,3 +1,11 @@
+2022-09-05T02:09:50Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2990381944
+* notice: last 14d: unq all: 19 50
+* notice: prev accum: outdated-unq outdated-all / unq all: 559 2369 / 593 2420
+* notice: next accum: outdated-unq outdated-all / unq all: 561 2372 / 594 2422
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-21] / []
+
 2022-09-04T08:22:21Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2987395867
 * notice: last 14d: unq all: 19 51
